<resources>
    <string name="app_name">App Mobile Slime Rancher</string>
    <string name="Texto1Comida">Os slimes são alimentado são divididas em três tipos:Frutas que crescem em árvores,vegetais que crescem no solo e carne que são as galinhas.</string>
    <string name="vegetais">Vegetais</string>
    <string name="frutas">Frutas</string>
    <string name="carnes">Carnes</string>
    <string name="Texto2Comida">Cada slime tem uma dieta particular, e a maioria deles comerá alimentos de uma das três categorias de alimentos padrão e não comerá alimentos fora de sua dieta.</string>
    <string name="a_fazenda">A Fazenda</string>
    <string name="comidas">Comidas</string>
    <string name="Texto1Fazenda">A fazenda é a base principal de operações para a personagem Beatrix LeBeau.  Nela é possível criar slimes e cultiva alimentos podendo expandir seu território conforme adquire moedas.</string>
    <string name ="Texto2Fazemda">Na fazenda há  terrenos onde você pode construir currais, plantações, galinheiros, entre outros recursos que  ajudam a progredir no jogo.</string>
    <string name="Texto1Slime">Existem diferentes tipos de slimes no jogo, que diferem com suas funções, formas e tamanhos.</string>
    <string name ="doceis">Dóceis</string>
    <string name="nocivos">Nocivos</string>
    <string name="especiais">Especiais</string>
    <string name="hostis">Hostis</string>
    <string name="slimeferal">Slime Feral</string>
    <string name="slimetarr">Slime Tarr</string>
    <string name="Texto1Sobre">O jogo acontece em um mundo aberto, em  perspectiva de primeira pessoa.  O jogador controla a personagem Beatrix LeBeau , uma fazendeira que se muda para um planeta distante da Terra para viver a vida de uma &quot;slime rancher&quot;, que consiste em construir seu rancho e explorar o ambiente, a fim de coletar, criar, alimentar Slimes , organismos vivos gelatinosos de vários tamanhos e características.</string>
    <string name="Texto2Sobre">Slime Rancher O jogo foi lançado como um título de acesso antecipado em janeiro de 2016, com lançamento oficial para Windows, macOS, Linux e Xbox One em 1º de agosto de 2017.</string>
    <string name="TextoSlime1">Existem diferentes tipos de slimes no jogo, que diferem com suas funções, formas e tamanhos.</string>
    <string name="slimes">Slimes</string>
    <string name="voltar">Voltar</string>
    <string name="sobre">Sobre</string>
    <string name="afazenda">A Fazenda</string>
    <string name="mapas">Mapas</string>
    <string name="historia">Historia</string>
    <string name="sair">Sair</string>
    <string name="em_um_mundo_futurista_onde_a_guerra_tornou_se_um_esporte_mortal_os_pilotos_mais_habilidosos_se_re_nem_no_torneio_aces_high_para_provar_sua_destreza_e_dominar_os_c_us_no_comando_de_jatos_de_alta_tecnologia_os_jogadores_embarcar_o_em_miss_es_emocionantes_em_tr_s_cen_rios_desafiadores_uma_cidade_devastada_uma_vila_pac_fica_e_o_vasto_espa_o_sideral_a_competi_o_feroz_e_apenas_os_pilotos_mais_habilidosos_e_estrat_gicos_prevalecer_o">Em um mundo futurista onde a guerra tornou-se um esporte mortal, os pilotos mais habilidosos se reúnem no torneio Aces High para provar sua destreza e dominar os céus. No comando de jatos de alta tecnologia, os jogadores embarcarão em missões emocionantes em três cenários desafiadores: uma cidade devastada, uma vila pacífica e o vasto espaço sideral. A competição é feroz, e apenas os pilotos mais habilidosos e estratégicos prevalecerão.</string>
    <string name="historia_do_jogo">Historia do Jogo</string>
    <string name="aces_high_se_passa_em_um_futuro_dist_pico_onde_na_es_rivais_resolveram_suas_diferen_as_em_uma_quot_arena_quot_de_combate_a_reo_conhecida_como_o_torneio_aces_high_o_jogo_coloca_os_jogadores_no_papel_de_pilotos_de_elite_onde_o_jogador_deve_destruir_as_aeronaves_que_aparecem_no_mapa">Aces High se passa em um futuro distópico, onde nações rivais resolveram suas diferenças em uma \"arena\" de combate aéreo conhecida como o Torneio Aces High. O jogo coloca os jogadores no papel de pilotos de elite onde o jogador deve destruir as aeronaves que aparecem no mapa</string>
    <string name="sinopse">Sinopse</string>
    <string name="todo">TODO</string>
    <string name="aces_high_wiki">Aces High WIKI</string>
    <string name="como_jogar">Como Jogar</string>
    <string name="objetivo_do_jogador_e_como_jogar">Objetivo do Jogador e Como Jogar</string>
    <string name="o_objetivo_principal_do_jogador_guiar_sua_nave_habilmente_por_um_mapa_repleto_de_obst_culos_inimigos_e_perigos_ao_longo_da_jornada_os_jogadores_precisar_o_aprimorar_suas_habilidades_de_pilotagem_evitando_colis_es_e_destruindo_os_inimigos">O objetivo principal do jogador é guiar sua nave habilmente por um mapa repleto de obstáculos, inimigos e perigos, Ao longo da jornada, os jogadores precisarão aprimorar suas habilidades de pilotagem, evitando colisões, e destruindo os inimigos.</string>
    <string name="a_jogabilidade_bem_simples_o_jogador_utiliza_os_seguintes_bot_es_para_se_mover_para_a_esquerda_para_se_mover_para_a_direita_e_e_mouse">A jogabilidade é bem simples, o jogador utiliza os seguintes botões: ← para se mover para a esquerda: → para se mover para a direita: e e mouse</string>
    <string name="fase_1">Fase 1</string>
    <string name="fase_2">Fase 2</string>
    <string name="fase_3">Fase 3</string>
    <string name="mapa_1_a_vila_pac_fica_neste_cen_rio_os_jogadores_s_o_transportados_para_uma_vila_tranquila_e_encantadora_situada_em_meio_a_paisagens_naturais_mapa_2_a_cidade_devastada_o_primeiro_mapa_coloca_os_jogadores_no_cora_o_de_uma_cidade_devastada_pela_guerra_mapa_3_o_espa_o_sideral_no_terceiro_e_mais_desafiador_mapa_os_jogadores_s_o_levados_ao_espa_o_sideral_onde_a_gravidade_j_n_o_exerce_seu_dom_nio">Mapa 1: A Vila Pacífica Neste cenário, os jogadores são transportados para uma vila tranquila e encantadora, situada em meio a paisagens naturais Mapa 2: A Cidade Devastada O primeiro mapa coloca os jogadores no coração de uma cidade devastada pela guerra. Mapa 3: O Espaço Sideral No terceiro e mais desafiador mapa, os jogadores são levados ao espaço sideral, onde a gravidade já não exerce seu domínio.</string>
    <string name="mapa_1_a_vila_pac_fica_neste_cen_rio_os_jogadores_s_o_transportados_para_uma_vila_tranquila_e_encantadora_situada_em_meio_a_paisagens_naturais_mapa_2_a_cidade_devastada_os_jogadores_no_cora_o_de_uma_cidade_devastada_pela_guerra_mapa_3_o_espa_o_sideral_no_terceiro_e_mais_desafiador_mapa_os_jogadores_s_o_levados_ao_espa_o_sideral_onde_a_gravidade_j_n_o_exerce_seu_dom_nio">Mapa 1: A Vila Pacífica Neste cenário, os jogadores são transportados para uma vila tranquila e encantadora, situada em meio a paisagens naturais Mapa 2: A Cidade Devastada os jogadores no coração de uma cidade devastada pela guerra. Mapa 3: O Espaço Sideral No terceiro e mais desafiador mapa, os jogadores são levados ao espaço sideral, onde a gravidade já não exerce seu domínio.</string>
</resources>