<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/back"
    tools:context="com.example.appmobileaceshigh.Mapas">

    <Button
        android:id="@+id/btnvoltar2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="#6FC4FA"
        android:fontFamily="@font/bubblegum"
        android:text="@string/voltar"
        android:textColor="#000000"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.904"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.963" />

    <ImageView
        android:id="@+id/imageFase1"
        android:layout_width="115dp"
        android:layout_height="163dp"
        android:contentDescription="TODO"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.054"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.802"
        app:srcCompat="@drawable/fase1"
        tools:ignore="ContentDescription,HardcodedText" />

    <ImageView
        android:id="@+id/imageFase2"
        android:layout_width="105dp"
        android:layout_height="160dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.803"
        app:srcCompat="@drawable/fase2"
        tools:ignore="ContentDescription" />

    <ImageView
        android:id="@+id/imageFase3"
        android:layout_width="112dp"
        android:layout_height="182dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.946"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.816"
        app:srcCompat="@drawable/fase3"
        tools:ignore="ContentDescription" />

    <TextView
        android:id="@+id/textFase1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        android:fontFamily="@font/bubblegum"
        android:text="@string/fase_1"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/imageFase1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.11"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textFase2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="96dp"
        android:layout_marginBottom="24dp"
        android:fontFamily="@font/bubblegum"
        android:text="@string/fase_2"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/imageFase2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.016"
        app:layout_constraintStart_toEndOf="@+id/textFase1" />

    <TextView
        android:id="@+id/textFase3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="36dp"
        android:layout_marginBottom="12dp"
        android:fontFamily="@font/bubblegum"
        android:text="@string/fase_3"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/imageFase3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.814"
        app:layout_constraintStart_toEndOf="@+id/textFase2" />

    <TextView
        android:id="@+id/textMapas"
        android:layout_width="373dp"
        android:layout_height="273dp"
        android:fontFamily="@font/bubblegum"
        android:text="@string/mapa_1_a_vila_pac_fica_neste_cen_rio_os_jogadores_s_o_transportados_para_uma_vila_tranquila_e_encantadora_situada_em_meio_a_paisagens_naturais_mapa_2_a_cidade_devastada_os_jogadores_no_cora_o_de_uma_cidade_devastada_pela_guerra_mapa_3_o_espa_o_sideral_no_terceiro_e_mais_desafiador_mapa_os_jogadores_s_o_levados_ao_espa_o_sideral_onde_a_gravidade_j_n_o_exerce_seu_dom_nio"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.421"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.27"
        tools:ignore="TextSizeCheck" />

</androidx.constraintlayout.widget.ConstraintLayout>